--- a/src/style.css
+++ b/src/style.css
@@ -1,28 +1,33 @@
-.weather-app {
-  max-width: 600px;
-  margin 30px auto;
-  padding: 20px;
-  border: 1px solid #daddel;
-  border-radius: 5px;
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-h1{
-color: #24564e;
+h1 {
+  color: #24564e;
   font-size: 24px;
   font-weight: 100;
-  line-height: 28px; 
-  margin-bottom: 0; 
+  line-height: 28px;
+  margin-bottom: 0;
 }
 ul {
- margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    color: rgb(135, 135, 135);
-    font-size: 16px;
-    font-weight: 100;
-    line-height: 19px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: rgb(135, 135, 135);
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+.weather-app {
+  padding: 20px;
+  border: 1px solid #24564e;
+  border-radius: 5px;
 }
